--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Bugfixes:
  - SDL: Fix potential joystick crash in games with rumble
  - SDL: Fix axes being mapped wrong
  - Qt: Fix initial state of key mapping
+ - Shaders: Fix AGS-001 shader with some bad drivers
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
