--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Misc:
  - SDL: Remove default gamepad mappings
  - Qt: Update 360 input profile on OS X to reflect newer drivers
  - Qt: Remove use of NaN
+ - 3DS: Use blip_add_delta_fast for a small speed improvement
 
 0.4.0: (2016-02-02)
 Features:
