All: Update CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ Bugfixes:
  - Shaders: Fix AGS-001 shader with some bad drivers
  - GBA Memory: Fix mirror on non-overdumped Classic NES games
  - Qt: Initialize m_useBios
+ - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
