--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Misc:
  - Qt: Update 360 input profile on OS X to reflect newer drivers
  - Qt: Remove use of NaN
  - 3DS: Use blip_add_delta_fast for a small speed improvement
+ - FFmpeg: Update dependencies on Ubuntu
 
 0.4.0: (2016-02-02)
 Features:
