--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Bugfixes:
  - Qt: Initialize m_useBios
  - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
  - GBA Serialize: Fix loading savegames from savestates
+ - All: Fix several file handle leaks
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
