--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Bugfixes:
  - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
  - GBA Serialize: Fix loading savegames from savestates
  - All: Fix several file handle leaks
+ - Util: Use closesocket on Windows
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
