OpenGL: Log shader compilation failure

--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Misc:
  - Qt: Remove use of NaN
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - FFmpeg: Update dependencies on Ubuntu
+ - OpenGL: Log shader compilation failure
 
 0.4.0: (2016-02-02)
 Features:
