Windows: Add native VDir support

--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@ Misc:
  - OpenGL: Log shader compilation failure
  - All: Allow use of external minizip library
  - Qt: Remove some C99isms from C++ code
+ - Windows: Add native VDir support
 
 0.4.0: (2016-02-02)
 Features:
