--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - All: Fix several file handle leaks
  - Util: Use closesocket on Windows
  - GBA Memory: Fix executing code from OBJ region of VRAM
+ - Util: Fix socket bind addresses
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
