--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@ Misc:
  - All: Allow use of external minizip library
  - Qt: Remove some C99isms from C++ code
  - Windows: Add native VDir support
+ - All: Add QUIET parameter to silence CMake
 
 0.4.0: (2016-02-02)
 Features:
