--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Bugfixes:
  - Util: Use closesocket on Windows
  - GBA Memory: Fix executing code from OBJ region of VRAM
  - Util: Fix socket bind addresses
+ - All: Fix instruction tables getting zeroed when linking sometimes
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
