--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.5.0: (Future)
 Features:
  - Game Boy support
+ - Support for encrypted CodeBreaker GBA cheats
 Bugfixes:
  - VFS: Fix reading 7z archives without rewinding first
  - Qt: Fix sending gameStopped twice
