--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Bugfixes:
  - Util: Fix socket bind addresses
  - All: Fix instruction tables getting zeroed when linking sometimes
  - SDL: Fix SDL 1.2 build
+ - ARM7: Fix flags on SBC/RSC
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
