--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ Misc:
  - Libretro: Disable logging game errors, BIOS calls and stubs in release builds
  - ARM7: Support forcing Thumb mode via MSR
  - ARM7: Flush prefetch cache when loading CPSR via MSR
+ - Qt: Canonicalize file paths when loading games
 
 0.4.0: (2016-02-02)
 Features:
