--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@ Misc:
  - Qt: Canonicalize file paths when loading games
  - OpenGL: Add texSize uniform
  - Qt: Add refresh button to controller editing
+ - ARM7: Clean up instruction decoding for future expandability
 
 0.4.0: (2016-02-02)
 Features:
