ARM7: Fix setting spsr privilege bits when spsr is empty

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ Bugfixes:
  - SDL: Fix SDL 1.2 build
  - ARM7: Fix flags on SBC/RSC
  - Util: Fix realloc semantics in utf16to8
+ - ARM7: Fix setting spsr privilege bits when spsr is empty
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
