VFS: VFile.sync now updates modified time

--- a/CHANGES
+++ b/CHANGES
@@ -49,6 +49,7 @@ Misc:
  - Qt: Add refresh button to controller editing
  - ARM7: Clean up instruction decoding for future expandability
  - Debugger: CLI debugger now exits when end-of-stream is reached
+ - VFS: VFile.sync now updates modified time
 
 0.4.0: (2016-02-02)
 Features:
