VFS: VFile.sync now updates modified time

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Misc:
  - Qt: Canonicalize file paths when loading games
  - Qt: Add refresh button to controller editing
  - Debugger: CLI debugger now exits when end-of-stream is reached
+ - VFS: VFile.sync now updates modified time
 
 0.4.0: (2016-02-02)
 Features:
