--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Bugfixes:
  - ARM7: Fix flags on SBC/RSC
  - Util: Fix realloc semantics in utf16to8
  - ARM7: Fix setting spsr privilege bits when spsr is empty
+ - GBA BIOS: Fix ArcTan2 accuracy and boundary conditions
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
