--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,7 @@ Misc:
  - Qt: Add refresh button to controller editing
  - Debugger: CLI debugger now exits when end-of-stream is reached
  - VFS: VFile.sync now updates modified time
+ - GBA: Add overrides for DBZ: Legacy of Goku II and Ueki no Housoku
 
 0.4.0: (2016-02-02)
 Features:
