Util: Fix intermittent build failure on OS X

--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@ Misc:
  - Debugger: CLI debugger now exits when end-of-stream is reached
  - VFS: VFile.sync now updates modified time
  - GBA: Add overrides for DBZ: Legacy of Goku II and Ueki no Housoku
+ - Util: Fix intermittent build failure on OS X
 
 0.4.0: (2016-02-02)
 Features:
