Debugger: Support additional GDB stub packets
Implements memory writing packets 'X' and 'M', and register writing
packets 'G' and 'P'.

Fixes the checksum verification to allow inclusion of '\0', which is
needed for the binary data argument of packet 'X'.

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ Misc:
  - OpenGL: Add texSize uniform
  - ARM7: Clean up instruction decoding for future expandability
  - Qt: Make -g flag work in Qt build
+ - Debugger: Support register and memory writes via GDB stub
 
 0.4.1: (2016-07-11)
 Bugfixes:
