--- a/CHANGES
+++ b/CHANGES
@@ -4,60 +4,65 @@ Features:
  - Support for encrypted CodeBreaker GBA cheats
  - Emulation of Vast Fame protected GBA carts (taizou)
 Bugfixes:
- - VFS: Fix reading 7z archives without rewinding first
- - Qt: Fix sending gameStopped twice
- - Qt: Fix hang if audio sync is enabled and audio fails to initialize
- - GBA BIOS: Fix RegisterRamReset setting DISPCNT to the wrong value
- - OpenGL: Correct boolean vector strcmp strings for uniforms
- - Wii: Fix tilting direction
- - SDL: Fix joystick initialization on BSD
- - SDL: Fix potential joystick crash in games with rumble
  - SDL: Fix axes being mapped wrong
- - Qt: Fix initial state of key mapping
- - Shaders: Fix AGS-001 shader with some bad drivers
  - GBA Memory: Fix mirror on non-overdumped Classic NES games
- - Qt: Initialize m_useBios
- - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
- - GBA Serialize: Fix loading savegames from savestates
- - All: Fix several file handle leaks
- - Util: Use closesocket on Windows
- - GBA Memory: Fix executing code from OBJ region of VRAM
- - Util: Fix socket bind addresses
- - All: Fix instruction tables getting zeroed when linking sometimes
- - SDL: Fix SDL 1.2 build
- - ARM7: Fix flags on SBC/RSC
  - Util: Fix realloc semantics in utf16to8
- - ARM7: Fix setting spsr privilege bits when spsr is empty
- - GBA BIOS: Fix ArcTan2 accuracy and boundary conditions
- - SDL: Fix sporadic crash when deinitializing audio
- - GBA Audio: Reset audio FIFO DMA if an invalid destination is set
- - VFS: VFileFromFD should not open directories
 Misc:
- - GBA: Slightly optimize GBAProcessEvents
- - Qt: Add preset for DualShock 4
- - SDL: Remove default gamepad mappings
- - Qt: Update 360 input profile on OS X to reflect newer drivers
- - Qt: Remove use of NaN
  - 3DS: Use blip_add_delta_fast for a small speed improvement
- - FFmpeg: Update dependencies on Ubuntu
  - OpenGL: Log shader compilation failure
- - All: Allow use of external minizip library
  - Qt: Remove some C99isms from C++ code
  - Windows: Add native VDir support
  - All: Add QUIET parameter to silence CMake
- - GBA Video: Null renderer should return proper register values
- - Libretro: Disable logging game errors, BIOS calls and stubs in release builds
  - ARM7: Support forcing Thumb mode via MSR
  - ARM7: Flush prefetch cache when loading CPSR via MSR
- - Qt: Canonicalize file paths when loading games
  - OpenGL: Add texSize uniform
- - Qt: Add refresh button to controller editing
  - ARM7: Clean up instruction decoding for future expandability
- - Debugger: CLI debugger now exits when end-of-stream is reached
- - VFS: VFile.sync now updates modified time
- - GBA: Add overrides for DBZ: Legacy of Goku II and Ueki no Housoku
- - Util: Fix intermittent build failure on OS X
  - Qt: Make -g flag work in Qt build
+
+0.4.1: (2016-07-11)
+Bugfixes:
+ - All: Fix several file handle leaks
+ - All: Fix instruction tables getting zeroed when linking sometimes
+ - ARM7: Fix flags on SBC/RSC
+ - ARM7: Fix setting spsr privilege bits when spsr is empty
+ - GBA Audio: Reset audio FIFO DMA if an invalid destination is set
+ - GBA BIOS: Fix RegisterRamReset setting DISPCNT to the wrong value
+ - GBA BIOS: Fix ArcTan2 accuracy and boundary conditions
+ - GBA Memory: Fix executing code from OBJ region of VRAM
+ - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
+ - GBA Serialize: Fix loading savegames from savestates
+ - OpenGL: Correct boolean vector strcmp strings for uniforms
+ - Qt: Fix sending gameStopped twice
+ - Qt: Fix hang if audio sync is enabled and audio fails to initialize
+ - Qt: Fix initial state of key mapping
+ - Qt: Initialize m_useBios
+ - SDL: Fix joystick initialization on BSD
+ - SDL: Fix potential joystick crash in games with rumble
+ - SDL: Fix SDL 1.2 build
+ - SDL: Fix sporadic crash when deinitializing audio
+ - Shaders: Fix AGS-001 shader with some bad drivers
+ - Util: Use closesocket on Windows
+ - Util: Fix socket bind addresses
+ - VFS: Fix reading 7z archives without rewinding first
+ - VFS: VFileFromFD should not open directories
+ - Wii: Fix tilting direction
+ - Util: Fix realloc semantics in utf16to8
+Misc:
+ - All: Allow use of external minizip library
+ - Debugger: CLI debugger now exits when end-of-stream is reached
+ - FFmpeg: Update dependencies on Ubuntu
+ - GBA: Slightly optimize GBAProcessEvents
+ - GBA: Add overrides for DBZ: Legacy of Goku II and Ueki no Housoku
+ - GBA Video: Null renderer should return proper register values
+ - Libretro: Disable logging game errors, BIOS calls and stubs in release builds
+ - Qt: Add preset for DualShock 4
+ - Qt: Update 360 input profile on OS X to reflect newer drivers
+ - Qt: Remove use of NaN
+ - Qt: Canonicalize file paths when loading games
+ - Qt: Add refresh button to controller editing
+ - SDL: Remove default gamepad mappings
+ - Util: Fix intermittent build failure on OS X
+ - VFS: VFile.sync now updates modified time
 
 0.4.0: (2016-02-02)
 Features:
