--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Features:
  - Game Boy support
  - Support for encrypted CodeBreaker GBA cheats
  - Emulation of Vast Fame protected GBA carts (taizou)
+ - Tile viewer
 Bugfixes:
  - SDL: Fix axes being mapped wrong
  - GBA Memory: Fix mirror on non-overdumped Classic NES games
