--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Misc:
  - GBA Audio: Force audio DMAs to not increment destination
  - Qt: Thread startup improvements
  - 3DS: Port to using citro3D
+ - 3DS: Use system font for menus
 
 0.4.1: (2016-07-11)
 Bugfixes:
