--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ Misc:
  - 3DS: Allow UTF-16 filenames
  - 3DS: Port to using citro3D
  - 3DS: Use system font for menus
+ - PSP2: Use system font for menus
 
 0.4.1: (2016-07-11)
 Bugfixes:
