--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@ Misc:
  - 3DS: Use system font for menus
  - PSP2: Use system font for menus
  - All: Faster memory read/write
+ - Qt: Make audio channel/video layer options shortcut mappable
 
 0.4.1: (2016-07-11)
 Bugfixes:
