Qt: Reset button status after turning off autofire

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Bugfixes:
  - Debugger: Fix GDB breakpoints
  - Wii: Fix framelimiting after a slowdown
  - PSP2: Fix gyroscope direction
+ - Qt: Fix hanging key press after disabling autofire
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
