--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Bugfixes:
  - ARM7: Fix decoding of Thumb ADD (variants 5 and 6)
  - GBA Serialize: Savestates now properly store prefetch
  - PSP2: Fix accelerometer range
+ - PSP2: Actually load screen mode setting
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
