--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ Bugfixes:
  - GBA Serialize: Savestates now properly store prefetch
  - PSP2: Fix accelerometer range
  - PSP2: Actually load screen mode setting
+ - Qt: Fix bug in software renderer scaling
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
