--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@ Misc:
  - Qt: Make audio channel/video layer options shortcut mappable
  - GBA Memory: Optimize stalling behavior
  - 3DS: Attempt to use Core 2 for threads
+ - GUI: Screenshot dimensions are now passed through
 
 0.4.1: (2016-07-11)
 Bugfixes:
