--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Features:
  - Emulation of Vast Fame protected GBA carts (taizou)
  - Tile viewer
  - Threaded rendering mode
+ - Libretro: Memory map and achievement support (leiradel)
 Bugfixes:
  - SDL: Fix axes being mapped wrong
  - GBA Memory: Fix mirror on non-overdumped Classic NES games
