--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ Misc:
  - GBA Memory: Optimize stalling behavior
  - 3DS: Attempt to use Core 2 for threads
  - GUI: Screenshot dimensions are now passed through
+ - GUI: Add back logging
 
 0.4.1: (2016-07-11)
 Bugfixes:
