--- a/CHANGES
+++ b/CHANGES
@@ -43,6 +43,7 @@ Misc:
  - 3DS: Attempt to use Core 2 for threads
  - GUI: Screenshot dimensions are now passed through
  - GUI: Add back logging
+ - PSP2: Add rumble for PS TV
 
 0.4.1: (2016-07-11)
 Bugfixes:
