--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ Bugfixes:
  - PSP2: Actually load screen mode setting
  - Qt: Fix bug in software renderer scaling
  - Debugger: Fix GDB breakpoints
+ - Wii: Fix framelimiting after a slowdown
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
