--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Bugfixes:
  - Wii: Fix framelimiting after a slowdown
  - PSP2: Fix gyroscope direction
  - Qt: Fix hanging key press after disabling autofire
+ - PSP2: Delete threads after they return
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
