--- a/CHANGES
+++ b/CHANGES
@@ -52,6 +52,7 @@ Misc:
  - GBA Video: Remove old slow path fallback
  - GBA Video: Optimize sprite drawing
  - GBA BIOS: Use custom ArcTan, not relying on OS
+ - PSP2: Sync files per descriptor
 
 0.4.1: (2016-07-11)
 Bugfixes:
