--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@ Bugfixes:
  - Qt: Fix hanging key press after disabling autofire
  - PSP2: Delete threads after they return
  - GBA Video: WIN0/1 take priority over OBJWIN
+ - PSP2: Fix mapping/unmapping from not at 0
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
