--- a/CHANGES
+++ b/CHANGES
@@ -57,6 +57,7 @@ Misc:
  - GBA BIOS: Use custom ArcTan, not relying on OS
  - PSP2: Sync files per descriptor
  - GBA Savedata: Add realistic timing for EEPROM
+ - GBA Video: Optimize mode 0 rendering
 
 0.4.1: (2016-07-11)
 Bugfixes:
