--- a/CHANGES
+++ b/CHANGES
@@ -59,6 +59,7 @@ Misc:
  - PSP2: Sync files per descriptor
  - GBA Savedata: Add realistic timing for EEPROM
  - GBA Video: Optimize mode 0 rendering
+ - Qt: Remove default autofire mappings
 
 0.4.1: (2016-07-11)
 Bugfixes:
