--- a/CHANGES
+++ b/CHANGES
@@ -60,6 +60,7 @@ Misc:
  - GBA Savedata: Add realistic timing for EEPROM
  - GBA Video: Optimize mode 0 rendering
  - Qt: Remove default autofire mappings
+ - PSP2: Allow UTF-8 filenames
 
 0.4.1: (2016-07-11)
 Bugfixes:
