--- a/CHANGES
+++ b/CHANGES
@@ -66,6 +66,7 @@ Misc:
  - Util: Add Vector GetConstPointer
  - Util: Add rtrim
  - GBA Memory: Optimize Load-/StoreMultiple
+ - 3DS: Adjustable filering
 
 0.4.1: (2016-07-11)
 Bugfixes:
