--- a/CHANGES
+++ b/CHANGES
@@ -71,6 +71,7 @@ Misc:
  - 3DS: Adjustable filering
  - PSP2: Screenshots are now saved into the Photo Gallery
  - Qt: Make reseting when pasued frame-accurate
+ - GBA Video: Optimize compositing cases slightly
 
 0.4.1: (2016-07-11)
 Bugfixes:
