--- a/CHANGES
+++ b/CHANGES
@@ -74,6 +74,7 @@ Misc:
  - Qt: Make reseting when pasued frame-accurate
  - GBA Video: Optimize compositing cases slightly
  - VFS: Improve zip file detection
+ - Util: Add endswith
 
 0.4.1: (2016-07-11)
 Bugfixes:
