--- a/CHANGES
+++ b/CHANGES
@@ -76,6 +76,7 @@ Misc:
  - GBA Video: Optimize compositing cases slightly
  - VFS: Improve zip file detection
  - Util: Add endswith
+ - GUI: Only reload config if manually saved
 
 0.4.1: (2016-07-11)
 Bugfixes:
