VFS: Fix reading multiple files from a 7z archive

--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ Bugfixes:
  - Wii: Fix garbage flash at startup
  - VFS: Fix uninitialized varaible reading from 7z
  - GBA: Fix losing IRQs when CPSR I bit isn't cleared
+ - VFS: Fix reading multiple files from a 7z archive
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
