--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Features:
  - Wii: 240p support
  - 3DS: Adjustable screen darkening
  - Ability to temporarily load a savegame
+ - Load specific files out of archives
 Bugfixes:
  - SDL: Fix axes being mapped wrong
  - GBA Memory: Fix mirror on non-overdumped Classic NES games
