GBA: Fix filehandle leak with savegames

--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,7 @@ Bugfixes:
  - VFS: Fix uninitialized varaible reading from 7z
  - GBA: Fix losing IRQs when CPSR I bit isn't cleared
  - VFS: Fix reading multiple files from a 7z archive
+ - GBA: Fix filehandle leak with savegames
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
