--- a/CHANGES
+++ b/CHANGES
@@ -80,6 +80,7 @@ Misc:
  - VFS: Improve zip file detection
  - Util: Add endswith
  - GUI: Only reload config if manually saved
+ - GBA Serialize: Savestates now store if CPU was halted
 
 0.4.1: (2016-07-11)
 Bugfixes:
