GBA: Timer 0 cannot be count up

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Bugfixes:
  - GBA: Fix losing IRQs when CPSR I bit isn't cleared
  - VFS: Fix reading multiple files from a 7z archive
  - GBA: Fix filehandle leak with savegames
+ - GBA: Timer 0 cannot be count up
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
