--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@ Bugfixes:
  - VFS: Fix reading multiple files from a 7z archive
  - GBA: Fix filehandle leak with savegames
  - GBA: Timer 0 cannot be count up
+ - Qt: Fix being unable to pause manually when using auto-pausing
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
