--- a/CHANGES
+++ b/CHANGES
@@ -84,6 +84,7 @@ Misc:
  - GUI: Only reload config if manually saved
  - GBA Serialize: Savestates now store if CPU was halted
  - PSP2: Stop underclocking when menuing
+ - GUI: Increase scrolling speed
 
 0.4.1: (2016-07-11)
 Bugfixes:
