--- a/CHANGES
+++ b/CHANGES
@@ -85,6 +85,7 @@ Misc:
  - GBA Serialize: Savestates now store if CPU was halted
  - PSP2: Stop underclocking when menuing
  - GUI: Increase scrolling speed
+ - Qt: Rearchitect game closing codepath
 
 0.4.1: (2016-07-11)
 Bugfixes:
