--- a/CHANGES
+++ b/CHANGES
@@ -88,6 +88,7 @@ Misc:
  - GUI: Increase scrolling speed
  - Qt: Rearchitect game closing codepath
  - Wii: Add pixelated resample filter
+ - GBA: Better debug logging if event processing breaks
 
 0.4.1: (2016-07-11)
 Bugfixes:
