--- a/CHANGES
+++ b/CHANGES
@@ -89,6 +89,7 @@ Misc:
  - Qt: Rearchitect game closing codepath
  - Wii: Add pixelated resample filter
  - GBA: Better debug logging if event processing breaks
+ - 3DS: 3D banner
 
 0.4.1: (2016-07-11)
 Bugfixes:
