--- a/CHANGES
+++ b/CHANGES
@@ -90,6 +90,7 @@ Misc:
  - Wii: Add pixelated resample filter
  - GBA: Better debug logging if event processing breaks
  - 3DS: 3D banner
+ - FFmpeg: Full support for libavcodec 56+
 
 0.4.1: (2016-07-11)
 Bugfixes:
