--- a/CHANGES
+++ b/CHANGES
@@ -92,6 +92,7 @@ Misc:
  - 3DS: 3D banner
  - FFmpeg: Full support for libavcodec 56+
  - Util: PNG utils should support 16-bit when applicable
+ - Debugger: Add software breakpoint support to gdb
 
 0.4.1: (2016-07-11)
 Bugfixes:
