--- a/CHANGES
+++ b/CHANGES
@@ -93,6 +93,7 @@ Misc:
  - FFmpeg: Full support for libavcodec 56+
  - Util: PNG utils should support 16-bit when applicable
  - Debugger: Add software breakpoint support to gdb
+ - Util: Add PRIz macro for libc versions that don't support %z
 
 0.4.1: (2016-07-11)
 Bugfixes:
