--- a/doc/mgba.6
+++ b/doc/mgba.6
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2015 Anthony J. Bentley <anthony@anjbe.name>
+.\" Copyright (c) 2015-2016 Anthony J. Bentley <anthony@anjbe.name>
 .\"
 .\" This Source Code Form is subject to the terms of the Mozilla Public
 .\" License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -230,11 +230,21 @@ If
 .Ar count
 is not specified, examine 16 bytes, 8 halfwords, or 4 words.
 .El
-.Sh FILES
-.Bl -tag -width ~/.config/mgba/config.ini -compact
-.It Pa ~/.config/mgba/config.ini
-Default
+.Sh ENVIRONMENT
+.Bl -tag -width Ds -compact
+.It Ev XDG_CONFIG_HOME
+The location where
 .Nm
+will look for the configuration directory.
+If not set,
+.Pa ~/.config
+is used.
+.El
+.Sh FILES
+.Bl -tag -width Ds -compact
+.It Pa $XDG_CONFIG_HOME/mgba/config.ini
+Default
+.Xr mgba 6
 configuration file.
 .It Pa portable.ini
 If this file exists in the current directory,
@@ -242,7 +252,7 @@ If this file exists in the current directory,
 will read
 .Pa config.ini
 from the current directory instead of
-.Pa ~/.config/mgba .
+.Pa $XDG_CONFIG_HOME/mgba .
 .El
 .Sh AUTHORS
 .An Jeffrey Pfau Aq Mt jeffrey@endrift.com
