--- a/CHANGES
+++ b/CHANGES
@@ -96,6 +96,7 @@ Misc:
  - Util: PNG utils should support 16-bit when applicable
  - Debugger: Add software breakpoint support to gdb
  - Util: Add PRIz macro for libc versions that don't support %z
+ - SDL: Increase default audio buffer size to 1024 samples
 
 0.4.1: (2016-07-11)
 Bugfixes:
