--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,7 @@ Bugfixes:
  - GBA Memory: Fix ldm {pc}
  - GBA Video: Fix out-of-order OBJWIN
  - GBA: Count up timers should not count themselves
+ - GBA Savedata: Fix savedata sync timer
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
