--- a/CHANGES
+++ b/CHANGES
@@ -100,6 +100,7 @@ Misc:
  - Util: Add PRIz macro for libc versions that don't support %z
  - SDL: Increase default audio buffer size to 1024 samples
  - GBA: Add override for Pokemon Pinball: Ruby and Sapphire rumble
+ - SDL: More responsive rumble
 
 0.4.1: (2016-07-11)
 Bugfixes:
