GBA Savedata: Only unmap savedata if present

--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ Bugfixes:
  - GBA Video: Fix out-of-order OBJWIN
  - GBA: Count up timers should not count themselves
  - GBA Savedata: Fix savedata sync timer
+ - GBA Savedata: Only unmap savedata if present
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
