--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 0.6.0: (Future)
+Bugfixes:
+ - GB MBC: Fix MBC7 when size is incorrectly specified
 Misc:
  - All: Only update version info if needed
 
