--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Bugfixes:
  - GB MBC: Fix MBC7 when size is incorrectly specified
  - GB Video: Setting LYC=LY during mode 2 should trigger an IRQ
  - GBA Cheats: Fix holding onto pointers that may get invalidated
+ - Qt: Fix "close" button on Overrides view
 Misc:
  - All: Only update version info if needed
 
