--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Bugfixes:
  - GB Video: Fix video frames getting missed when LCDC is off
  - LR35902: Fix events running with the wrong cycle active
  - GB Video: Clear screen when LCDC is off
+ - GBA Cheats: Fix key-activated CodeBreaker cheats
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
