GBA Video: Clean up unused timers

--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ Misc:
  - SDL: Remove scancode key input
  - GB Video: Improved video timings
  - All: Split out install locations for Libretro and OpenEmu
+ - GBA Video: Clean up unused timers
 
 0.5.0: (2016-09-19)
 Features:
