GB, GBA: Fix emulator hardlocking when halting with IRQs off

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - Core: Fix importing save games as read-only
  - Util: Fix PNG identification on files too small to be a PNG
  - GB: Fix invalid STOP behavior on Game Boy Color
+ - GB, GBA: Fix emulator hardlocking when halting with IRQs off
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
