GB Video: Improved video timings

--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
  - GB Memory: Initialize RAM pattern for GBC
+ - GB Video: Improved video timings
 
 0.5.0: (2016-09-19)
 Features:
