SDL: Attach rumble in SDL frontend

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Bugfixes:
  - Util: Fix PNG identification on files too small to be a PNG
  - GB: Fix invalid STOP behavior on Game Boy Color
  - GB, GBA: Fix emulator hardlocking when halting with IRQs off
+ - SDL: Attach rumble in SDL frontend
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
