GB: Properly clear KEY1 bit 0 when switching speeds

--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Bugfixes:
  - GBA Hardware: Improve Game Boy Player rumble behavior
  - GB: Initialize audio properly
  - GB MBC: Fix RTC access when no save file is loaded
+ - GB: Properly clear KEY1 bit 0 when switching speeds
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
