GBA Cheats: Fix uninitialized memory getting freed when saving

--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,7 @@ Bugfixes:
  - GB: Initialize audio properly
  - GB MBC: Fix RTC access when no save file is loaded
  - GB: Properly clear KEY1 bit 0 when switching speeds
+ - GBA Cheats: Fix uninitialized memory getting freed when saving
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
