--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@ Bugfixes:
  - GB MBC: Fix RTC access when no save file is loaded
  - GB: Properly clear KEY1 bit 0 when switching speeds
  - GBA Cheats: Fix uninitialized memory getting freed when saving
+ - GBA Memory: Fix several unused I/O register read values
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
