--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 0.6.0: (Future)
+Features:
+ - GBA: Support printing debug strings from inside a game
 Bugfixes:
  - GB MBC: Fix MBC7 when size is incorrectly specified
  - GB Video: Setting LYC=LY during mode 2 should trigger an IRQ
