--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Bugfixes:
  - GB: Properly clear KEY1 bit 0 when switching speeds
  - GBA Cheats: Fix uninitialized memory getting freed when saving
  - GBA Memory: Fix several unused I/O register read values
+ - Qt: Fix patch loading
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
