Qt: Remember scale option independent of core dimensions

--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,7 @@ Misc:
  - All: Split out install locations for Libretro and OpenEmu
  - GBA Video: Clean up unused timers
  - Qt: Manage window sizes slightly better
+ - Qt: Remember scale option independent of core dimensions
 
 0.5.0: (2016-09-19)
 Features:
