--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Misc:
  - All: Split out install locations for Libretro and OpenEmu
  - Qt: Manage window sizes slightly better
  - Qt: Remember scale option independent of core dimensions
+ - GB: Reset active region when reloading ROM
 
 0.5.0: (2016-09-19)
 Features:
