GB Timer: Improve DIV reset behavior

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Features:
  - GBA: Support printing debug strings from inside a game
 Bugfixes:
  - LR35902: Fix core never exiting with certain event patterns
+ - GB Timer: Improve DIV reset behavior
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
