--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Bugfixes:
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
+ - Test: Add a basic test suite
 
 0.5.1: (2016-10-05)
 Bugfixes:
