GBA Memory: Fix misaligned BIOS reads

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Features:
 Bugfixes:
  - LR35902: Fix core never exiting with certain event patterns
  - GB Timer: Improve DIV reset behavior
+ - GBA Memory: Fix misaligned BIOS reads
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
