--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.5.2: (Future)
+Bugfixes:
+ - GBA Memory: Fix misaligned BIOS reads
+
 0.5.1: (2016-10-05)
 Bugfixes:
  - Core: Fix importing save games as read-only
