--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
  - LR35902: Fix core never exiting with certain event patterns
  - GB Timer: Improve DIV reset behavior
  - GBA Memory: Fix misaligned BIOS reads
+ - GBA BIOS: Fix MidiKey2Freq BIOS reads
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
