GBA BIOS: Fix invalid CpuSet not setting BIOS prefetch

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 Bugfixes:
  - GBA Memory: Fix misaligned BIOS reads
  - GBA BIOS: Fix MidiKey2Freq BIOS reads
+ - GBA BIOS: Fix invalid CpuSet not setting BIOS prefetch
 
 0.5.1: (2016-10-05)
 Bugfixes:
