GB MBC: Fix SRAM dangling pointer with RTC games

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Bugfixes:
  - GBA Memory: Fix misaligned BIOS reads
  - GBA BIOS: Fix MidiKey2Freq BIOS reads
  - GBA BIOS: Fix invalid CpuSet not setting BIOS prefetch
+ - GB MBC: Fix SRAM dangling pointer with RTC games
 
 0.5.1: (2016-10-05)
 Bugfixes:
