Windows: Fix Unicode directory handling

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Bugfixes:
  - GBA BIOS: Fix MidiKey2Freq BIOS reads
  - GBA BIOS: Fix invalid CpuSet not setting BIOS prefetch
  - GB MBC: Fix SRAM dangling pointer with RTC games
+ - Windows: Fix Unicode directory handling
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
