--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@ Misc:
  - GBA Video: Clean up unused timers
  - Test: Add a basic test suite
  - GBA Video: Allow multiple handles into the same tile cache
+ - VFS: Call msync when syncing mapped data
 
 0.5.1: (2016-10-05)
 Bugfixes:
