GBA Cheats: Fix GameShark ROM patches

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Bugfixes:
  - Qt: Fix changing resolution of software renderer
  - Qt: Fix setting overrides
  - Qt: Fix cut off tiles and alignment issues in tile viewer
+ - GBA Cheats: Fix GameShark ROM patches
 
 0.5.1: (2016-10-05)
 Bugfixes:
