--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Features:
  - GBA: Support printing debug strings from inside a game
  - GBA: Better cheat type autodetection
  - GB: Tile viewer
+ - Sprite viewer
 Bugfixes:
  - LR35902: Fix core never exiting with certain event patterns
  - GB Timer: Improve DIV reset behavior
