--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,7 @@ Misc:
  - Test: Add a basic test suite
  - GBA Video: Allow multiple handles into the same tile cache
  - VFS: Call msync when syncing mapped data
+ - GBA Video, GB Video: Colors are now fully scaled
 
 0.5.1: (2016-10-05)
 Bugfixes:
